<resources>
    <string name="app_name">Ride Sharing</string>
    <string name="application_name">CAR SHARING KOSOVA</string>
    <string name="map">Map</string>
    <string name="rides">Rides</string>
    <string name="profile">Profile</string>
    <string name="past_rides">Past Rides</string>
    <string name="my_vehicles">My Vehicles</string>
    <string name="imageview_for_profile">Imageview for profile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="first_name">First Name</string>
    <string name="register">Register</string>
    <string name="log_out">Log out</string>
    <string name="archived">Archived</string>
    <string name="type">Type :</string>
    <string name="delete">Delete</string>
    <string name="year_of_production">Year of Production :</string>
    <string name="color">Color :</string>
    <string name="add_car">Add Car</string>
    <string name="personal_information">Personal Information</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="color_decp">Color</string>
    <string name="year_of_production_decp">Year of production</string>
    <string name="ride_detailes">Ride Details</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="number_of_seats">Number of seats</string>
    <string name="price">Price*</string>
    <string name="description_about_the_ride">Description about the ride</string>
    <string name="add_ride">Add Ride</string>
    <string name="date_and_time">Date and Time</string>
    <string name="google_key_api">AIzaSyA8koAEsGGu7jD2ieVasIOKczJGdSFe45E</string>
    <string name="reset_pass">Reset Password</string>
    <string name="participating_rides">Participating Rides</string>
    <string name="posted_rides">Posted Rides</string>
    <string name="passengers">Passengers</string>

    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="password_confirm">Password Confirm</string>
</resources>
