<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="v"
                type="android.view.View"
                />

        <variable
                name="model"
                type="com.thesis.ridesharing.ui.home.profile.ProfileViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:background="@color/ghost_white"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/horizontal_guideline_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1"
                />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/horizontal_guideline_30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3"
                />

        <ImageView
                android:id="@+id/profile_image_view"
                android:layout_width="100dp"
                android:contentDescription="@string/imageview_for_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/ic_girl"
                app:layout_constraintTop_toTopOf="@id/horizontal_guideline_10"
                android:layout_height="100dp"
                />

        <TextView
                android:id="@+id/name_text_view"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:textSize="@dimen/text_size_20"
                android:layout_marginTop="@dimen/size_10"
                app:layout_constraintTop_toBottomOf="@+id/profile_image_view"
                android:layout_height="wrap_content"
                />

        <Button
                android:id="@+id/personal_information_text_view"
                android:layout_width="match_parent"
                android:onClick="@{()->model.openPersonalInformationActivity()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/horizontal_guideline_30"
                android:padding="@dimen/size_10"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="@dimen/text_size_14"
                android:layout_margin="@dimen/size_20"
                android:background="@drawable/rounded_corners_red"
                android:text="@string/personal_information"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/my_vehicles_text_view"
                android:layout_width="match_parent"
                android:onClick="@{()->model.openMyVehiclesActivity()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personal_information_text_view"
                android:padding="@dimen/size_10"
                android:textColor="@color/white"
                android:gravity="center"
                android:textAllCaps="false"
                android:layout_margin="@dimen/size_20"
                android:textSize="@dimen/text_size_14"
                android:background="@drawable/rounded_corners_red"
                android:text="@string/my_vehicles"
                android:layout_height="wrap_content"
                />

        <Button
                android:id="@+id/past_rides_text_view"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/my_vehicles_text_view"
                android:padding="@dimen/size_10"
                android:onClick="@{()->model.openPastRidesActivity()}"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:gravity="center"
                android:textSize="@dimen/text_size_14"
                android:layout_margin="@dimen/size_20"
                android:background="@drawable/rounded_corners_red"
                android:text="@string/past_rides"
                android:layout_height="wrap_content"
                />

        <Button
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:drawableRight="@drawable/ic_exit_second"
                android:padding="@dimen/size_10"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:textAllCaps="false"
                android:onClick="@{()->model.logout()}"
                android:layout_margin="@dimen/size_20"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/rounded_light_red"
                android:text="@string/log_out"
                android:layout_height="wrap_content"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
