<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="view"
                type="android.view.View"/>

        <variable
                name="model"
                type="com.thesis.ridesharing.ui.vehicles.add_vehicle.AddVehicleModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/progress_bar_holder"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_0"
                android:background="@color/gray_background"
                android:gravity="center"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                    android:id="@+id/progress_circular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateDrawable="@drawable/gradient_progress_bar"
                    android:indeterminateTintMode="src_in"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/horizontal_guideline_10"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1"
                android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/horizontal_guideline_80"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.8"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_15"
                android:gravity="center"
                android:text="@string/add_car"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/horizontal_guideline_10"
                android:layout_height="wrap_content"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:onClick="@{()->model.closeActivity()}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="@dimen/size_10"
                android:padding="@dimen/size_10"
                android:src="@drawable/ic_arrow_back"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toTopOf="@id/horizontal_guideline_10"
                android:layout_height="wrap_content"/>


        <ImageView
                android:id="@+id/vehicle_text_view"
                android:layout_width="100dp"
                app:layout_constraintTop_toBottomOf="@id/horizontal_guideline_10"
                android:src="@drawable/ic_carr"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="100dp"/>


        <EditText
                android:id="@+id/brand_edit_text"
                android:layout_width="match_parent"
                android:backgroundTint="@color/colorPrimary"
                android:layout_marginLeft="@dimen/size_10"
                android:hint="@string/brand"
                android:focusable="false"
                android:inputType="none"
                android:textColor="@color/colorPrimary"
                android:onClick="@{()->model.addBrand()}"
                android:drawableRight="@drawable/ic_arrow_drop_down"
                android:textColorHint="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@id/vehicle_text_view"
                android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/model_edit_text"
                android:layout_width="match_parent"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/model"
                android:focusable="false"
                android:inputType="none"
                android:onClick="@{()->model.addModel()}"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="@dimen/size_10"
                android:textColorHint="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:drawableRight="@drawable/ic_arrow_drop_down"
                app:layout_constraintTop_toBottomOf="@+id/brand_edit_text"
                android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/color_edit_text"
                android:layout_width="match_parent"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/color_decp"
                android:inputType="none"
                android:focusable="false"
                android:onClick="@{()->model.addColor()}"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="@dimen/size_10"
                android:textColorHint="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                android:drawableRight="@drawable/ic_arrow_drop_down"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/model_edit_text"
                android:layout_height="wrap_content"/>


        <EditText
                android:id="@+id/year_of_production_edit_text"
                android:layout_width="match_parent"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/year_of_production_decp"
                android:inputType="none"
                android:focusable="false"
                android:onClick="@{()->model.addYear()}"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="@dimen/size_10"
                android:textColorHint="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                android:drawableRight="@drawable/ic_arrow_drop_down"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/color_edit_text"
                android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/seats_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_10"
                android:backgroundTint="@color/colorPrimary"
                android:drawableRight="@drawable/ic_arrow_drop_down"
                android:focusable="false"
                android:hint="Number of Seats"
                android:inputType="none"
                android:onClick="@{()->model.addSeat()}"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/year_of_production_edit_text" />

        <Button
                android:id="@+id/past_rides_text_view"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/horizontal_guideline_80"
                android:padding="@dimen/size_20"
                android:textColor="@color/white"
                android:gravity="center"
                android:onClick="@{()->model.addVehicle()}"
                android:layout_margin="@dimen/size_20"
                android:background="@drawable/rounded_corners_red"
                android:text="@string/add_vehicle"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>